Retail Lending-Production/src/objects/Company_Financials__c.object
<CustomObject>
    <fields>
        <fullName>Banker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Banker</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Company Financials (Banker)</relationshipLabel>
        <relationshipName>Company_Financials1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Company Financials</relationshipLabel>
        <relationshipName>Company_Financials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Depriciation_co_y1__c</fullName>
        <label>Depriciation co y1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Depriciation_co_y2__c</fullName>
        <label>Depriciation co y2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Depriciation_co_y3__c</fullName>
        <label>Depriciation co y3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Profit_co_y1__c</fullName>
        <label>Gross Profit co y1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Profit_co_y2__c</fullName>
        <label>Gross Profit co y2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Profit_co_y3__c</fullName>
        <label>Gross Profit co y3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>itr_co_y1__c</fullName>
        <label>itr co y1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>itr_co_y2__c</fullName>
        <label>itr co y2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>itr_co_y3__c</fullName>
        <label>itr co y3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Company Financials</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Company Financials Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Company Financials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>